--- a/PokeAPI/View/DetailItem.storyboard
+++ b/PokeAPI/View/DetailItem.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Combo 2 Forros Protector Sillas Carro Auto Mascota Perro" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B61-Zx-tyF">
-                                        <rect key="frame" x="10" y="20" width="394" height="80"/>
+                                        <rect key="frame" x="20" y="20" width="374" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="80" id="o3C-7U-MaW"/>
                                         </constraints>
@@ -35,7 +35,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="LVM-ib-HPA">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="LVM-ib-HPA">
                                         <rect key="frame" x="157" y="121" width="100" height="98.666666666666671"/>
                                         <color key="tintColor" systemColor="systemGray5Color"/>
                                         <constraints>
@@ -188,10 +188,10 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="LVM-ib-HPA" firstAttribute="centerX" secondItem="Lot-FT-wPC" secondAttribute="centerX" id="5mG-6r-UUz"/>
-                                    <constraint firstAttribute="trailing" secondItem="B61-Zx-tyF" secondAttribute="trailing" constant="10" id="B7Q-YM-r9g"/>
+                                    <constraint firstAttribute="trailing" secondItem="B61-Zx-tyF" secondAttribute="trailing" constant="20" id="B7Q-YM-r9g"/>
                                     <constraint firstAttribute="trailing" secondItem="RAH-4g-jVg" secondAttribute="trailing" constant="20" id="IZK-TO-3Op"/>
                                     <constraint firstItem="RAH-4g-jVg" firstAttribute="leading" secondItem="Lot-FT-wPC" secondAttribute="leading" constant="20" id="SpB-la-tBo"/>
-                                    <constraint firstItem="B61-Zx-tyF" firstAttribute="leading" secondItem="Lot-FT-wPC" secondAttribute="leading" constant="10" id="TL9-d0-8dX"/>
+                                    <constraint firstItem="B61-Zx-tyF" firstAttribute="leading" secondItem="Lot-FT-wPC" secondAttribute="leading" constant="20" id="TL9-d0-8dX"/>
                                     <constraint firstItem="RAH-4g-jVg" firstAttribute="top" secondItem="LVM-ib-HPA" secondAttribute="bottom" constant="20" id="WXf-8M-2D3"/>
                                     <constraint firstAttribute="bottom" secondItem="RAH-4g-jVg" secondAttribute="bottom" constant="40" id="bc3-z1-hVg"/>
                                     <constraint firstItem="LVM-ib-HPA" firstAttribute="top" secondItem="B61-Zx-tyF" secondAttribute="bottom" constant="20" id="g8I-P2-7DE"/>
