--- a/PokeAPI/View/DetailItem.storyboard
+++ b/PokeAPI/View/DetailItem.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -21,8 +22,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lot-FT-wPC">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Combo 2 Forros Protector Sillas Carro Auto Mascota Perro" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B61-Zx-tyF">
-                                        <rect key="frame" x="20" y="20" width="374" height="80"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pikachu" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="B61-Zx-tyF">
+                                        <rect key="frame" x="19.999999999999993" y="20" width="92.333333333333314" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="80" id="o3C-7U-MaW"/>
                                         </constraints>
@@ -36,12 +37,13 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="LVM-ib-HPA">
-                                        <rect key="frame" x="157" y="121" width="100" height="98.666666666666671"/>
+                                        <rect key="frame" x="157" y="118.66666666666663" width="100" height="103.33333333333337"/>
                                         <color key="tintColor" systemColor="systemGray5Color"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="1uP-xA-Ac9"/>
                                             <constraint firstAttribute="height" constant="100" id="g9q-u0-exJ"/>
                                         </constraints>
+                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RAH-4g-jVg">
                                         <rect key="frame" x="20" y="240" width="374" height="456"/>
@@ -85,9 +87,6 @@
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="luL-Yr-o7B">
                                                                 <rect key="frame" x="50" y="0.0" width="284" height="40"/>
-                                                                <constraints>
-                                                                    <constraint firstAttribute="height" constant="70" id="mgx-Kj-9Dd"/>
-                                                                </constraints>
                                                                 <fontDescription key="fontDescription" name="NotoSansMyanmar-Bold" family="Noto Sans Myanmar" pointSize="20"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -111,9 +110,6 @@
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Height" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZVP-ww-HAd">
                                                                 <rect key="frame" x="50" y="0.0" width="284" height="40"/>
-                                                                <constraints>
-                                                                    <constraint firstAttribute="height" constant="70" id="5JM-M4-eg2"/>
-                                                                </constraints>
                                                                 <fontDescription key="fontDescription" name="NotoSansMyanmar-Bold" family="Noto Sans Myanmar" pointSize="20"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -158,9 +154,6 @@
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Envio gratuito!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3kq-zY-0PY">
                                                         <rect key="frame" x="50" y="0.0" width="284" height="40"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="39.5" id="RCX-px-u0V"/>
-                                                        </constraints>
                                                         <fontDescription key="fontDescription" name="NotoSansMyanmar-Bold" family="Noto Sans Myanmar" pointSize="18"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -184,18 +177,33 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1JT-BT-tD3">
+                                        <rect key="frame" x="344" y="20" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="Nb2-AC-S9z"/>
+                                            <constraint firstAttribute="height" constant="50" id="Vx6-SO-Bhr"/>
+                                        </constraints>
+                                        <color key="tintColor" name="Purple"/>
+                                        <state key="normal">
+                                            <imageReference key="image" image="HeartNotFill" symbolScale="large"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="savePokemon:" destination="CUm-SP-6UN" eventType="touchUpInside" id="tkR-5r-2tD"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="LVM-ib-HPA" firstAttribute="centerX" secondItem="Lot-FT-wPC" secondAttribute="centerX" id="5mG-6r-UUz"/>
-                                    <constraint firstAttribute="trailing" secondItem="B61-Zx-tyF" secondAttribute="trailing" constant="20" id="B7Q-YM-r9g"/>
                                     <constraint firstAttribute="trailing" secondItem="RAH-4g-jVg" secondAttribute="trailing" constant="20" id="IZK-TO-3Op"/>
                                     <constraint firstItem="RAH-4g-jVg" firstAttribute="leading" secondItem="Lot-FT-wPC" secondAttribute="leading" constant="20" id="SpB-la-tBo"/>
                                     <constraint firstItem="B61-Zx-tyF" firstAttribute="leading" secondItem="Lot-FT-wPC" secondAttribute="leading" constant="20" id="TL9-d0-8dX"/>
                                     <constraint firstItem="RAH-4g-jVg" firstAttribute="top" secondItem="LVM-ib-HPA" secondAttribute="bottom" constant="20" id="WXf-8M-2D3"/>
                                     <constraint firstAttribute="bottom" secondItem="RAH-4g-jVg" secondAttribute="bottom" constant="40" id="bc3-z1-hVg"/>
+                                    <constraint firstAttribute="trailing" secondItem="1JT-BT-tD3" secondAttribute="trailing" constant="20" id="ew9-ls-qbk"/>
                                     <constraint firstItem="LVM-ib-HPA" firstAttribute="top" secondItem="B61-Zx-tyF" secondAttribute="bottom" constant="20" id="g8I-P2-7DE"/>
                                     <constraint firstItem="B61-Zx-tyF" firstAttribute="top" secondItem="Lot-FT-wPC" secondAttribute="top" constant="20" id="ill-oh-wF8"/>
+                                    <constraint firstItem="1JT-BT-tD3" firstAttribute="top" secondItem="Lot-FT-wPC" secondAttribute="top" constant="20" id="nqd-4j-JHU"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -224,6 +232,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="HeartNotFill" width="170.66667175292969" height="170.66667175292969"/>
         <image name="Height" width="170.66667175292969" height="170.66667175292969"/>
         <image name="Id" width="170.66667175292969" height="170.66667175292969"/>
         <image name="Moves" width="170.66667175292969" height="170.66667175292969"/>
@@ -232,6 +241,9 @@
         <image name="clock" catalog="system" width="128" height="121"/>
         <namedColor name="Orange">
             <color red="0.80000001192092896" green="0.41200000047683716" blue="0.18400000035762787" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Purple">
+            <color red="0.83099997043609619" green="0.47499999403953552" blue="0.83099997043609619" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="SoftOrange">
             <color red="0.9649999737739563" green="0.93300002813339233" blue="0.9100000262260437" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
