--- a/PokeAPI/View/DetailItem.storyboard
+++ b/PokeAPI/View/DetailItem.storyboard
@@ -56,7 +56,7 @@
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Id" translatesAutoresizingMaskIntoConstraints="NO" id="F4i-WA-Oqb">
                                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
-                                                                <color key="tintColor" name="Orange"/>
+                                                                <color key="tintColor" red="0.27597582339999999" green="0.380964309" blue="0.9647582173" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="40" id="g53-V3-qY1"/>
                                                                     <constraint firstAttribute="width" constant="40" id="y8z-jI-8h5"/>
@@ -79,7 +79,7 @@
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Weight" translatesAutoresizingMaskIntoConstraints="NO" id="kNH-5H-JL7">
                                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
-                                                                <color key="tintColor" name="Orange"/>
+                                                                <color key="tintColor" red="0.27597582339999999" green="0.380964309" blue="0.9647582173" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="40" id="gPA-GV-yms"/>
                                                                     <constraint firstAttribute="width" constant="40" id="pwN-fa-j4t"/>
@@ -102,7 +102,7 @@
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Height" translatesAutoresizingMaskIntoConstraints="NO" id="rWN-0d-R1S">
                                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
-                                                                <color key="tintColor" name="Orange"/>
+                                                                <color key="tintColor" red="0.27597582339999999" green="0.380964309" blue="0.9647582173" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="40" id="W4N-Le-45l"/>
                                                                     <constraint firstAttribute="width" constant="40" id="lTj-cG-jdm"/>
@@ -125,7 +125,7 @@
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Type" translatesAutoresizingMaskIntoConstraints="NO" id="Ji2-eo-pW9">
                                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
-                                                                <color key="tintColor" name="Orange"/>
+                                                                <color key="tintColor" red="0.27597582339999999" green="0.380964309" blue="0.9647582173" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="40" id="rFx-t9-Qad"/>
                                                                     <constraint firstAttribute="width" constant="40" id="teK-18-OB5"/>
@@ -142,18 +142,21 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="AVQ-Of-kqb">
-                                                <rect key="frame" x="20" y="260" width="334" height="40"/>
+                                                <rect key="frame" x="20" y="260" width="334" height="80"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Moves" translatesAutoresizingMaskIntoConstraints="NO" id="gOW-T1-Wkb">
-                                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
-                                                        <color key="tintColor" name="Orange"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="40" height="80"/>
+                                                        <color key="tintColor" red="0.27597582339999999" green="0.380964309" blue="0.9647582173" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="40" id="8C9-KY-9Fv"/>
                                                             <constraint firstAttribute="width" constant="40" id="DL6-Jn-LjY"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Envio gratuito!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3kq-zY-0PY">
-                                                        <rect key="frame" x="50" y="0.0" width="284" height="40"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Moves" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3kq-zY-0PY">
+                                                        <rect key="frame" x="50" y="0.0" width="284" height="80"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="284" id="Kyu-1S-qdc"/>
+                                                            <constraint firstAttribute="height" constant="80" id="c4U-Sa-yWt"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" name="NotoSansMyanmar-Bold" family="Noto Sans Myanmar" pointSize="18"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -161,7 +164,7 @@
                                                 </subviews>
                                             </stackView>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.83137254900000002" green="0.73725490199999999" blue="0.38823529410000002" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.27450980392156865" green="0.380964309" blue="0.9647582173" alpha="0.23999999999999999" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="AVQ-Of-kqb" secondAttribute="trailing" constant="20" id="7ar-7b-aZM"/>
                                             <constraint firstAttribute="trailing" secondItem="Tlm-7I-noe" secondAttribute="trailing" constant="20" id="9EF-kI-xTR"/>
@@ -183,7 +186,7 @@
                                             <constraint firstAttribute="width" constant="50" id="Nb2-AC-S9z"/>
                                             <constraint firstAttribute="height" constant="50" id="Vx6-SO-Bhr"/>
                                         </constraints>
-                                        <color key="tintColor" name="Purple"/>
+                                        <color key="tintColor" red="0.27597582339999999" green="0.380964309" blue="0.9647582173" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal">
                                             <imageReference key="image" image="HeartNotFill" symbolScale="large"/>
                                         </state>
@@ -240,12 +243,6 @@
         <image name="Type" width="170.66667175292969" height="170.66667175292969"/>
         <image name="Weight" width="170.66667175292969" height="170.66667175292969"/>
         <image name="clock" catalog="system" width="128" height="121"/>
-        <namedColor name="Orange">
-            <color red="0.80000001192092896" green="0.41200000047683716" blue="0.18400000035762787" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Purple">
-            <color red="0.83099997043609619" green="0.47499999403953552" blue="0.83099997043609619" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="SoftOrange">
             <color red="0.9649999737739563" green="0.93300002813339233" blue="0.9100000262260437" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
